--- a/ZhouZhenWuAllDemoApplication/app/build.gradle
+++ b/ZhouZhenWuAllDemoApplication/app/build.gradle
@@ -12,6 +12,8 @@ android {
         versionName "1.0"
     }
     buildTypes {
+        debug {
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -26,4 +28,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.nineoldandroids:library:2.4.+'
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
