--- a/ZhouZhenWuAllDemoApplication/app/build.gradle
+++ b/ZhouZhenWuAllDemoApplication/app/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "slidingchoiceview.dingding.com.zhouzhenwualldemoapplication"
         minSdkVersion 9
@@ -24,10 +27,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.nineoldandroids:library:2.4.+'
     compile fileTree(dir: 'libs', include: '*.jar')
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.facebook.fresco:fresco:0.9.0+'
 }
