--- a/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".main.activity.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
@@ -24,37 +24,37 @@
         </activity>
 
         <activity
-            android:name=".activity.AboutScrollViewActivity"
+            android:name=".animation.activity.AboutScrollViewActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <!--Java相关学习测试-->
         <activity
-            android:name=".activity.JavaTestActivity"
+            android:name=".java.activity.JavaTestActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <!--Android相关学习测试-->
         <activity
-            android:name=".activity.AndroidTestActivity"
+            android:name=".android.activity.AndroidTestActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <!--滑动吸顶Activity-->
         <activity
-            android:name=".activity.ChangeWithScrollActivity"
+            android:name=".animation.activity.ChangeWithScrollActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <!--算法学习Activity-->
         <activity
-            android:name=".activity.AlgorithmActivity"
+            android:name=".algorithm.activity.AlgorithmActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <!--设计模式学习Activity-->
         <activity
-            android:name=".activity.DesignPatternActivity"
+            android:name=".designpattern.activity.DesignPatternActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
