--- a/ZhouZhenWuAllDemoApplication/app/build.gradle
+++ b/ZhouZhenWuAllDemoApplication/app/build.gradle
@@ -16,10 +16,12 @@ android {
     }
     buildTypes {
         debug {
+            buildConfigField("String", "LOG_TAG", "\"ZZW\"");
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "LOG_TAG", "\"ZZW\"");
         }
     }
 }
