--- a/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
@@ -63,6 +63,11 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".animation.activity.TendencyChartActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <!--算法学习Activity-->
         <activity
             android:name=".algorithm.activity.AlgorithmActivity"
