--- a/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
@@ -72,6 +72,11 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name="study.zhouzhenwu.com.mydemo.animation.activity.ExpandableRecycleViewActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <!--使用RecycleView的Activity-->
         <activity
             android:name="study.zhouzhenwu.com.mydemo.animation.activity.RecycleViewActivity"
