--- a/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
@@ -97,6 +97,30 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
+            android:name="study.zhouzhenwu.com.mydemo.animation.activity.OpenActivityFromSrcViewToTargetViewActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name="study.zhouzhenwu.com.mydemo.animation.activity.OpenActivity1"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name="study.zhouzhenwu.com.mydemo.animation.activity.RecycleViewDragItemActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name="study.zhouzhenwu.com.mydemo.animation.activity.RecycleViewSlidingItemActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name="study.zhouzhenwu.com.mydemo.animation.activity.TendencyChartActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
