--- a/ZhouZhenWuAllDemoApplication/app/build.gradle
+++ b/ZhouZhenWuAllDemoApplication/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+// google AutoValue
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     // 必添加的项只有下面两项
@@ -75,4 +77,14 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.facebook.fresco:fresco:0.9.0+'
+
+    // google AutoValue
+    compile "com.google.auto.value:auto-value:1.4.1"
+    apt "com.google.auto.value:auto-value:1.4.1"
+    apt 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
+    compile 'com.ryanharter.auto.value:auto-value-parcel-adapter:0.2.5' // 需要自定义TypeAdapter就要导入
+
+    // google ZXing扫码
+    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
+    compile 'com.android.support:appcompat-v7:23.1.0'   // Version 23+ is required
 }
