--- a/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
@@ -152,7 +152,7 @@
 
         <!--Android相关学习测试-->
         <activity
-            android:name="study.zhouzhenwu.com.mydemo.android.AndroidTestActivityActivity"
+            android:name="study.zhouzhenwu.com.mydemo.android.AndroidTestMainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
@@ -163,6 +163,21 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name="study.zhouzhenwu.com.mydemo.android.activity.GoogleZXingScanActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <activity
+            android:name="study.zhouzhenwu.com.mydemo.android.activity.MyScanActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/zxing_CaptureTheme"
+            android:windowSoftInputMode="stateAlwaysHidden"></activity>
         <activity
             android:name="study.zhouzhenwu.com.mydemo.android.activity.PopupWindowTestActivity"
             android:label="@string/app_name"
