--- a/ZhouZhenWuAllDemoApplication/app/build.gradle
+++ b/ZhouZhenWuAllDemoApplication/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
 // google AutoValue
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     // 必添加的项只有下面两项
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '26.0.2'
 
     // 默认设置，这些都会对应配置重写在AndroidManifest.xml中
     defaultConfig {
@@ -14,6 +13,12 @@ android {
         targetSdkVersion 23 // 目标版本
         versionCode 1
         versionName "1.0"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath = true
+            }
+        }
     }
 
     // 签名配置
@@ -38,17 +43,16 @@ android {
     }
 
     productFlavors {
-        // 版本flavor1
-        flavor1 {
-            buildConfigField("String", "LOG_TAG", "\"ZZW\"");
-        }
+//        // 版本flavor1
+//        flavor1 {
+//            buildConfigField("String", "LOG_TAG", "\"ZZW\"");
+//        }
+//
+//        // 版本flavor2
+//        flavorr2 {
+//            buildConfigField("String", "LOG_TAG", "\"ZZW\"");
+//        }
 
-        // 版本flavor2
-        flavorr2 {
-            buildConfigField("String", "LOG_TAG", "\"ZZW\"");
-        }
-
-        bu
     }
 
 
@@ -80,9 +84,9 @@ dependencies {
 
     // google AutoValue
     compile "com.google.auto.value:auto-value:1.4.1"
-    apt "com.google.auto.value:auto-value:1.4.1"
-    apt 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
-    compile 'com.ryanharter.auto.value:auto-value-parcel-adapter:0.2.5' // 需要自定义TypeAdapter就要导入
+//    apt "com.google.auto.value:auto-value:1.4.1"
+//    apt 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
+//    compile 'com.ryanharter.auto.value:auto-value-parcel-adapter:0.2.5' // 需要自定义TypeAdapter就要导入
 
     // google ZXing扫码
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
@@ -90,4 +94,6 @@ dependencies {
 
     // multitypeRecycleView的引入
     compile 'me.drakeet.multitype:multitype:3.0.0'
+
+    annotationProcessor "com.google.dagger:dagger-compiler:2.6"
 }
