--- a/ZhouZhenWuAllDemoApplication/gradle/wrapper/gradle-wrapper.properties
+++ b/ZhouZhenWuAllDemoApplication/gradle/wrapper/gradle-wrapper.properties
@@ -4,3 +4,11 @@ distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
+
+
+#Gradle-Step1:
+#distributionBase:代表下载的Gradle 压缩包解压后的主目录
+#distributionPath:相对于distributionBase 的解压后的Gradle压缩包的路径
+#zipStoreBase:同distributionBase，只不过是存放zip压缩包
+#zipStorePath:同distributionPath，只不过是存放zip压缩包
+#distributionUrl:Gradle发新版压缩包的下载地址：如果导入项目时一直在loading，很多时候可能是下载太慢，可以修改路径后面xx.zip为你已经下载好的gradle版本，或者从其他渠道下载好放到指定目录
