--- a/ZhouZhenWuAllDemoApplication/app/build.gradle
+++ b/ZhouZhenWuAllDemoApplication/app/build.gradle
@@ -34,8 +34,8 @@ apply plugin: 'com.android.application'
 android {
     // 必添加的项只有下面两项
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
-    enforceUniquePackageName false // 解决包名冲突
+    buildToolsVersion '28.0.2'
+//    enforceUniquePackageName false // 解决包名冲突
 
     // 默认设置，这些都会对应配置重写在AndroidManifest.xml中
     // defaultConfig是默认的配置，它是一个ProductFlavor。ProductFlavor允许我们根据不同的情况同时生成多个不同的apk包。
@@ -53,9 +53,9 @@ android {
             }
         }
 
-        jackOptions {
-            enabled true
-        }
+//        jackOptions {
+//            enabled true
+//        }
     }
 
     compileOptions {
@@ -135,36 +135,36 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile(name: 'pickerview', ext: 'aar')
-    compile project(':framework')
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api(name: 'pickerview', ext: 'aar')
+    api project(':framework')
 
-    testCompile 'junit:junit:4.12'
-    compile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.nineoldandroids:library:2.4.+'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.facebook.fresco:fresco:0.9.0+'
+    testImplementation 'junit:junit:4.12'
+    api 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    api 'com.android.support:appcompat-v7:23.2.1'
+    api 'com.android.support:design:23.2.1'
+    api 'com.nineoldandroids:library:2.4.+'
+    api 'com.squareup.okhttp3:okhttp:3.2.0'
+    api 'com.facebook.fresco:fresco:0.9.0+'
 
     // google AutoValue
-    compile "com.google.auto.value:auto-value:1.4.1"
+    api "com.google.auto.value:auto-value:1.4.1"
 //    apt "com.google.auto.value:auto-value:1.4.1"
 //    apt 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
 //    compile 'com.ryanharter.auto.value:auto-value-parcel-adapter:0.2.5' // 需要自定义TypeAdapter就要导入
 
     // google ZXing扫码
-    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
+    api 'com.journeyapps:zxing-android-embedded:3.5.0'
 
     // multitypeRecycleView的引入
-    compile 'me.drakeet.multitype:multitype:3.0.0'
+    api 'me.drakeet.multitype:multitype:3.0.0'
 
     annotationProcessor "com.google.dagger:dagger-compiler:2.6"
 
     // airbnb的lottie库
-    compile 'com.airbnb.android:lottie:1.0.1'
+    api 'com.airbnb.android:lottie:1.0.1'
 
     // 微信sdk
-    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 
 }
