--- a/ZhouZhenWuAllDemoApplication/framework/build.gradle
+++ b/ZhouZhenWuAllDemoApplication/framework/build.gradle
@@ -18,6 +18,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+        staging.initWith(buildTypes.debug)
+        staging {
+            versionNameSuffix "-staging"
+            debuggable = false
+        }
+
     }
     repositories {
         flatDir {
