--- a/ZhouZhenWuAllDemoApplication/gradle.properties
+++ b/ZhouZhenWuAllDemoApplication/gradle.properties
@@ -16,3 +16,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+#这条命令是用来配置gradle命令执行是使用Android Studio目录下对应的JDK环境，否则在执行gradlew命令是会出现问题
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jre/jdk/Contents/Home
+
+#在这里自定义了一个propertiesFile字段，在这里定义的字段，可以在整个项目工程中使用
+propertiesFile = Hello from gradle.properties
