--- a/ZhouZhenWuAllDemoApplication/build.gradle
+++ b/ZhouZhenWuAllDemoApplication/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 // 可以参考https://mp.weixin.qq.com/s/1UHcYOudViMhpUYeREZzGA
-apply from: 'version.gradle'
+// 引入一个自定义的build_test.gradle，那么我们就能使用这个build_test.gradle中的task和定义的属性
+apply from: 'build_test.gradle'
 
 //Gradle-Step3:project的build.gradle文件执行
 /*
@@ -16,6 +17,17 @@ buildscript {
     repositories {
         jcenter()
         google()
+
+        // maven { url 'http://sdk.pt.miui.com/miuisdk/maven2' } // 小米的maven仓库
+
+//        maven {
+//            url "http://repo.acmecorp.com/maven2"
+        // 如果仓库需要用户名和密码才能访问，那么可以这么定义远程仓库,当然这么做并不是个好注意，验证放在Gradle properties会更好
+//            credentials {
+//                username 'user'
+//                password 'secretpassword'
+//            }
+//        }
     }
 
     // dependencies里面用来配置依赖的插件
@@ -42,6 +54,7 @@ allprojects {
         }
         google()
     }
+
 }
 /* buildscript和allprojects的作用和区别
  *
@@ -61,12 +74,19 @@ task clean(type: Delete) {
 
 //在这里定义了全局的一些构建属性
 ext {
-    compileSdkVersion = 26
-    buildToolsVersion = "28.0.2"
-    minSdkVersion = 16
-    unTargetSdkVersion = 26
-    miuiTargetSdkVersion = 26
     javaVersion = JavaVersion.VERSION_1_7
+
+    local = 'Hello from build.gradle'
+}
+
+task printProperties << {
+    println local        // local 定义在此文件的ext中
+    println propertiesFile        // propertiesFile定义在gradle.properties中
+    println versionName       // 定义在build_test.gradle/version.gradle中的ext中
+    if (project.hasProperty('cmd')) {
+        // 如果在执行task：printProperties时后面带上参数 -Pcmd='Hello from the command line'，那么将会输出Hello from the command line
+        println cmd        // Command line property
+    }
 }
 
 
